--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/index.css" />
-    <title>PortFolio</title>
+    <title>CSS</title>
   </head>
   <body>
+    <!-- NavBar -->
     <ul>
       <li class="active"><a href="#">Home</a></li>
       <li><a href="#">Proyectos</a></li>
@@ -18,6 +19,7 @@
       <p>LALALA</p>
     </div>
 
+    <!-- Boton desplegable -->
     <div class="dropdown">
       <button class="dropdown-btn">DropDown</button>
       <div class="dropdown-content">
@@ -27,10 +29,11 @@
       </div>
     </div>
 
+    <!-- Formulario  -->
     <div class="box">
       <form>
         <label>Nombre</label>
-        <input type="text" name="nombre" id="nombre" value="Nombre"/>
+        <input type="text" name="nombre" id="nombre" value="Nombre" />
 
         <label for="">Apellido</label>
         <input type="text" name="apellido" id="apellido" value="Apellido" />
@@ -40,6 +43,13 @@
 
         <input type="submit" />
       </form>
+    </div>
+    <!-- Backgrounds -->
+    <div class="fondo">
+      <p>Prueba</p>
+      <p>Prueba</p>
+      <p>Prueba</p>
+      <p>Prueba</p>
     </div>
   </body>
   <script src="/js/index.js"></script>
