corrigiendo forms y agregandosombras a cajas y textos

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <div class="box">
       <form>
         <label>Nombre</label>
-        <input type="text" name="nombre" id="nombre" value="Nombre" />
+        <input type="text" name="nombre" id="nombre" placeholder="Nombre" />
 
         <label for="">Apellido</label>
-        <input type="text" name="apellido" id="apellido" value="Apellido" />
+        <input type="text" name="apellido" id="apellido" placeholder="Apellido"  />
 
         <label for="">Mensaje</label>
         <textarea></textarea>
@@ -46,11 +46,16 @@
     </div>
     <!-- Backgrounds -->
     <div class="fondo">
-      <p>Prueba</p>
-      <p>Prueba</p>
-      <p>Prueba</p>
-      <p>Prueba</p>
+      <p>Prueba 1</p>
+      <p>Prueba 2</p>
+      <p>Prueba 3</p>
     </div>
+
+    <!-- Sombras -->
+    <div class="shad">
+        <p> Caja </p>
+    </div>
+    <p class="text"> Hola Mundo</p>
   </body>
   <script src="/js/index.js"></script>
 </html>
