terminando transitions y transforms

--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
 
 
 
-    <!-- Transform -->
+    <!-- Transformaciones 2 dimenciones -->
     <div>
       <p class="trans">Transform</p>
+    </div>
+    <br><br><br>
+
+    <!-- Transformaciones de 3 dimenciones -->
+
+    <div class="trans3d">
+      <p> Hola Mundo</p>
+    </div>
+
+    <!-- Transiciones Animadas -->
+    <div class="transa">
+      <p>Hola Mundo</p>
     </div>
 
   </body>
