subiendo la actualizacion

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
       <p>Hola Mundo</p>
     </div>
 
+    <div>
+      <p>subiendo git</p>
+    </div>
   </body>
   <script src="/js/index.js"></script>
 </html>
