--- a/flexbox.html
+++ b/flexbox.html
@@ -8,9 +8,23 @@
     <title>FlexBox</title>
 </head>
 <body>
-    <div>
-        <p>Hola Mundo</p>
-        <p>Hola Mundo</p>
+    <div class="flex">
+        <div>
+            <div>abc</div>
+            <div>abc</div> 
+        </div>
+        <div>ABC</div>
+        <div>BCD</div>
+        <div>CDF</div>
+        <div>ABC</div>
+        <div>BCD</div>
+        <div>C</div>
+        <div>ABC</div>
+        <div>BCD</div>
+        <div>CDF</div>
+        <div>ABC</div>
+        <div>BCD</div>
+        <div>CDF</div>
     </div>
 </body>
 </html>
